terraformSecurityGroupUbuntuDesktop.tf
resource "aws_security_group" "ubuntu_desktop" {
  name = "ubuntu_desktop_security_group"
  description = "ubuntu_desktop - SSH and HTTP"
  ingress {
    protocol = "tcp"
    from_port = 22
    to_port = 22
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  ingress {
    protocol = "tcp"
    from_port = 80
    to_port = 80
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }
}
